fix height/width of avatar and navbar, resolve issue with scrollbar

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -11,8 +11,12 @@ body {
 /* TOP-NAVIGATON section */
 
 .navbar {
-	height: 12vh;
+	height: 15vh;
 	background-color: grey;
+}
+
+#avatar {
+	width: 12vh;
 }
 
 .nav-thumbnail-color {
@@ -41,12 +45,12 @@ body {
 
 .sidebar-nav {
 	background: #6e92c2; 
-	height: 85vh;
+	height: 80vh;
 	max-width: 13rem;
 	position: absolute;
 	top: 0;
 	left: 0;
-	margin-top: 12vh;
+	margin-top: 15vh;
 	padding-top: 1rem;
 	width: 13rem;
 	box-shadow: 5px 3px 10px rgba(0, 0, 0, 0.1);
@@ -65,7 +69,7 @@ body {
 .page-content {
 	background: lightgrey;
 	width: calc(100% - 13rem); 
-	height: 85vh;
+	height: 80vh;
 	margin-left: 13rem;
 	overflow-y: auto;
 }
@@ -74,9 +78,14 @@ body {
 	background: lightblue;
 }
 
+.post-username {
+	font-weight: bold;
+	font-size: 1.2rem;
+	text-align: center;
+}
 
 /* FOOTER section */
 footer {
-	height: 3vh;
+	height: 5vh;
 	background-color: grey;
 }
